--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.483.0",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icon": "^1.0.0",
