--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^19.0.0",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
+    "react-loader-spinner": "^7.0.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.0",
     "react-scroll": "^1.9.3",
