--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.18.2",
+    "express-validator": "^7.2.1",
     "firebase-admin": "^13.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.0",
