set clients dotenv update orderPage

--- a/client/.env
+++ b/client/.env
@@ -1,9 +1,2 @@
-import axios from "axios";
-
-const API = axios.create({
-  baseURL: import.meta.env.VITE_API_URL || "http://localhost:8000",
-  withCredentials: true,
-  headers: { "Content-Type": "application/json" },
-});
-
-export default API;
+VITE_BASEURL="http://localhost:8000"
+VITE_GEOAPIKEY="406875f5400e4a299b05e9142b25d28f"
