--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.13.0",
     "cloudinary": "^1.41.3",
     "firebase": "^11.6.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.483.0",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
