--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,8 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^3.1.0",
-    "reselect": "^5.1.1"
+    "reselect": "^5.1.1",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
