--- a/client/package.json
+++ b/client/package.json
@@ -15,14 +15,16 @@
     "cloudinary": "^1.41.3",
     "firebase": "^11.6.0",
     "framer-motion": "^12.23.24",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.483.0",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-loader-spinner": "^7.0.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.7.0",
