changed api endpoints

--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,2 @@
-VITE_BASEURL="http://localhost:8000"
-VITE_GEOAPIKEY="406875f5400e4a299b05e9142b25d28f"
+VITE_BASEURL=http://15.206.209.155
+VITE_GEOAPIKEY=406875f5400e4a299b05e9142b25d28f
