add domain name in CORS origin

--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,4 @@
-VITE_BASEURL=http://15.206.209.155
+# VITE_BASEURL=http://15.206.209.155
+VITE_BASEURL=
 VITE_GEOAPIKEY=406875f5400e4a299b05e9142b25d28f
 MODE=development
