--- a/client/.gitignore
+++ b/client/.gitignore
@@ -7,12 +7,14 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+.env
+.env.production
 serviceAccountKey.json
 node_modules
 dist
 dist-ssr
 *.local
-.env
+
 
 # Editor directories and files
 .vscode/*
